<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.interaction.InteractionActivity">

        <Button
            android:id="@+id/btn_calculate_interaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dd_gender_field" />


        <ImageView
            android:id="@+id/iv_logo_interaction"
            android:layout_width="294dp"
            android:layout_height="250dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/shot_logo_loos_tp2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv_user_insta_id_interaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:text="@{user.instaId}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_interaction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_user_interaction"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            app:startIconDrawable="@drawable/ic_interaction_24"
            android:layout_marginTop="@dimen/dimen_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_insta_id_interaction">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_interaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_interaction_difference"
                android:inputType="number"
                android:maxLength="2" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_user_follower"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_follower_account_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_interaction">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_follower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_follower_difference"
                android:inputType="number"/>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dd_gender_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/select_gender"
            app:startIconDrawable="@drawable/ic_gender_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_follower">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dd_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="user"
            type="com.mahdikaseatashin.shotshot.database.model.UserEntity" />
    </data>

</layout>
