<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/steel_blue"
        android:fitsSystemWindows="true"
        tools:context=".view.add.AddEditUserActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.ShotShot.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/steel_blue"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/collapsing_toolbar_add">

                <ImageView
                    android:id="@+id/iv_user_add_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/user_profile"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_photo_place_holder"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/collapsing_toolbar_add"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/Theme.AppCompat.DayNight"
                    app:layout_collapseMode="pin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:titleTextColor="?attr/actionMenuTextColor" />

                <ImageView
                    android:id="@+id/iv_save_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:background="?selectableItemBackground"
                    android:contentDescription="@string/save_user"
                    android:onClick="@{(view) -> viewModel.saveUser()}"
                    android:padding="8dp"
                    android:src="@drawable/ic_save_24"
                    app:layout_collapseMode="pin" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/jordy_blue"
            android:contentDescription="@string/add_photo"
            android:onClick="addPhoto"
            app:borderWidth="0dp"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_insert_photo" />

        <include
            layout="@layout/content_add"
            bind:user="@{user}"
            bind:viewModel="@{viewModel}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>

        <variable
            name="viewModel"
            type="com.mahdikaseatashin.shotshot.viewmodel.UserViewModel" />

        <variable
            name="user"
            type="com.mahdikaseatashin.shotshot.database.model.UserEntity" />
    </data>

</layout>
