<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.add.AddEditUserActivity"
        tools:showIn="@layout/activity_add_user">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:startIconDrawable="@drawable/ic_instagram_circle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_insta_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{(editable) -> viewModel.setUserId(editable)}"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_."
                        android:hint="@string/name"
                        android:inputType="textFilter"
                        android:maxLines="1"
                        android:text="@{user.instaId}" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{(editable) -> viewModel.setPhone(editable)}"
                        android:hint="@string/enter_phonenumber"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:text="@{user.phone}" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_follower_account_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_follower_number_add"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{(editable) -> viewModel.setFollowerNumber(editable)}"
                        android:hint="@string/follower_num"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:text="@{Long.toString(user.followerNum)}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/follower_number_extension_add_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.7">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/follower_number_extension_add"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{(editable) -> viewModel.setFollowerEx(editable)}"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/extension" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:startIconDrawable="@drawable/ic_interaction_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_interaction_rate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{(editable) -> viewModel.setInteraction(editable)}"
                        android:hint="@string/enter_interaction_rate"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:text="@{Integer.toString(user.interaction)}" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dd_gender_add_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="160dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/select_gender"
                    app:startIconDrawable="@drawable/ic_gender_24">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/dd_gender_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{(editable) -> viewModel.setGender(editable)}"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <data>

        <variable
            name="viewModel"
            type="com.mahdikaseatashin.shotshot.viewmodel.UserViewModel" />

        <variable
            name="user"
            type="com.mahdikaseatashin.shotshot.database.model.UserEntity" />

    </data>

</layout>
